Fix compilation under Sun Studio 12 U1 on OpenSolaris

Thanks to tropikhajma for testing and patch

BUG: 217285

svn path=/trunk/KDE/kdeedu/kstars/; revision=1118375